# EchoText

./: .gitignore  README.md
backend/: requirements.txt
backend/app/: main.py
backend/app/routes/: transcription.py
backend/app/services/: deepgram_service.py  vad_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: generate_icons.py  icon.icns
frontend/src/components/: Controls.jsx  TranscriptionDisplay.jsx  VoiceRecorder.jsx
frontend/src/hooks/: useAudioCapture.js  useTranscription.js  useVAD.js
frontend/src/services/: api.js
